footer no longer hidden by mission start screen

--- a/public/javascripts/common/css/validate-mission-start-tutorial.css
+++ b/public/javascripts/common/css/validate-mission-start-tutorial.css
@@ -22,7 +22,7 @@
 
 .mission-start-tutorial-overlay {
     position: absolute;
-    height: 710px;
+    height: 683px;
     width: 100%;
     min-width: 1170px; /*  */
     background: white;
